--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="book_title">Book Title</string>
+    <string name="author">Author</string>
+    <string name="checkout_date">Checkout Date</string>
+    <string name="tags">Tags</string>
+    <string name="publisher">Publisher</string>
+    <string name="checkout">Checkout</string>
 </resources>
