--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="tags">Tags</string>
     <string name="publisher">Publisher</string>
     <string name="checkout">Checkout</string>
+    <string name="book_title">Book Title</string>
+    <string name="author">Author</string>
+    <string name="publisher">Publisher</string>
+    <string name="categories">Categories</string>
+    <string name="submit">Submit</string>
 </resources>
