--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="checkout">Checkout</string>
     <string name="categories">Categories</string>
     <string name="submit">Submit</string>
+    <string name="enter_name">Enter Name</string>
 </resources>
