add FragmentTransaction for add books menu click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="delete_book">Delete</string>
     <string name="do_you_want_to_delete_this_book">Do You Want To Delete This Book?</string>
     <string name="delete">Delete</string>
+    <string name="delete_all_books">Delete All Books</string>
 </resources>
